# godscore-ci

./: .gitignore  MARKETPLACE.md  NOTICE  README.md  ablation_tests.py  action.yml  action_main.py  autoscore_v1.py  godscore-demo  godscore.json  godscore.py  godscore.sig  godscore.sigstore.json  gv_config.json  gv_engine.py  gv_gate.py  invariant_tests.py  pyproject.toml  scoring_pipeline.py  static_analysis.py  test_god_variable_interactions.py  test_god_variable_perturbations.py:
.well-known/: godscore.json  godscore.sig  godscore.sigstore.json
api/: build_attestation.py  chi_gate.py  evidence.v1.json  example_output.v1.json  example_signals.v1.json  explanations.v1.json  generate_v1.py  metrics.v1.json  policy.v1.json  recommendations.v1.json  render_summary.py  schema.v1.json  signals.v1.json  todos.v1.json  validate_v1.py  verify_attestation.py
dashboard/: index.html
docs/: continuity_hypothesis.md  godscore.json  godscore.sigstore.json  identity_signature.md
examples/: README.md  fails.yml  passes.yml
experiments/: exp_irreversibility_vi.py
godscore/: __init__.py  identity_signature.py
godscore-demo/: README.md  gv.yml
godscore_ci/: cli.py  core.py  gv_score.py  reporters.py  toy_sim.py
godscore_ci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
godscore_objective_good_patch_full/: README_snippet.md
godscore_openai_ci (1)/: godscore.py  orchestrator.py
governance/: README.md  gv_config.example.yml
gv_baseline/: evolution.py  godscore.py
gv_out/: gv_report.json  gv_report.md
pages/: index.html
scripts/: mk_report.py  (+2 more)
(+56 files in other folders)
