[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godscore-ci"
version = "0.1.0"
description = "GodScore CI: survivability/coherence scoring + CI gate."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "William Shacklett"}]
dependencies = []

[project.scripts]
godscore = "godscore_ci.cli:main"

[tool.setuptools]
packages = ["godscore_ci"]

